# PsyDoom

./: CMakeLists.txt  CONTRIBUTORS.md
.github/workflows/: compile.yml
baselib/: ByteInputStream.h  CMakeLists.txt  Finally.h  IniUtils.h  Macros.h
cmake/: BuildSetup.cmake  HelperFunctions.cmake
docs/: PsyDoom Lua Scripting.md  PsyDoom MAPINFO.md  PsyDoom Modding Overview.md
extras/psydoom_mapping/: What Are These.txt
extras/psydoom_mapping/Build DOOMSFX.LCD/: build.py
game/: CMakeLists.txt
game/Doom/: cdmaptbl.cpp  d_main.cpp
game/Doom/Base/: i_drawstringex.cpp  i_main.cpp  i_main.h  i_misc.cpp  i_misc.h  i_texcache.cpp  s_sound.cpp  sounds.h
game/Doom/Game/: doomdata.h  g_game.cpp  p_base.cpp  p_inter.cpp  p_inter.h  p_liquidfx.cpp  p_liquidfx.h  p_move.cpp  p_password.cpp  p_setup.cpp  p_shoot.cpp  p_spec.cpp  p_spec.h  p_switch.cpp  p_tick.cpp  p_tick.h  p_user.cpp
game/Doom/Renderer/: r_data.h  r_local.h  r_main.cpp  r_main.h  r_plane.cpp  r_segs.cpp  r_things.cpp
game/Doom/RendererVk/: rv_automap.cpp  rv_flats.cpp  rv_main.cpp  rv_main.h  rv_sky.cpp  rv_sprites.cpp  rv_utils.cpp  rv_walls.cpp
game/Doom/UI/: displayopt_main.cpp  displayopt_main.h  errormenu_main.cpp  f_finale.cpp  in_main.cpp  inputopt_main.cpp  inputopt_main.h  loadsave_main.cpp  m_main.cpp  m_main.h  o_main.cpp  pw_main.cpp  saveroot_main.cpp  st_main.cpp  st_main.h  ti_main.cpp  xoptions_main.cpp
game/Old/PsyQ/: Old_LIBCD.cpp
game/PsyDoom/: Cheats.cpp  DemoCommon.cpp  DemoCommon.h  DemoPlayer.cpp  DiscReader.cpp  DiscReader.h  Game.cpp  Game.h  GameConstants.cpp  GameSettings.cpp  GameSettings.h  GammaTable.cpp  GammaTable.h  ImageOps.cpp  ImageOps.h  Input.cpp  IntroLogos.cpp  LIBGPU_CmdDispatch.cpp  MacDisplayLink.h  MacDisplayLink.mm  ModMgr.cpp  ModMgr.h  MusicStreamer.cpp  MusicStreamer.h  ParserTokenizer.h  PlayerPrefs.cpp  PlayerPrefs.h  PsxVm.cpp  SaveAndLoad.h  SaveDataTypes.cpp  ScriptBindings.cpp  SpuExtInputMux.cpp  Utils.cpp  Utils.h  Video.cpp  Video.h  VideoBackend_SDL.cpp  VideoBackend_Vulkan.cpp  VideoSurface_SDL.cpp  VideoSurface_Vulkan.cpp  (+1 more)
game/PsyDoom/Audio/: AudioData.h  AudioEngine.cpp  AudioEngine.h  AudioSampler.cpp  AudioSampler.h  AudioVoice.cpp  AudioVoice.h  MusicStreamer.cpp  MusicStreamer.h  SoundCache.cpp  SoundCache.h  SpuExtInputMux.cpp  SpuExtInputMux.h  WavReader.cpp  WavReader.h
game/PsyDoom/Config/: Config.cpp  Config.h  ConfigSerialization_Graphics.cpp  ConfigSerialization_Graphics.h  ConfigSerialization_Multiplayer.cpp  ConfigSerialization_Multiplayer.h
game/PsyDoom/Launcher/: Launcher_Context.h  Launcher_Tab_Graphics.cpp  Launcher_Tab_Launcher.cpp  Launcher_Tab_Multiplayer.cpp
game/PsyDoom/MapInfo/: MapInfo.cpp  MapInfo.h  MapInfo_Defaults.cpp  MapInfo_Defaults_Doom.cpp  MapInfo_Defaults_Doom_Alpha_0_05.cpp  MapInfo_Defaults_Doom_Alpha_0_05.h  MapInfo_Defaults_Doom_Alpha_0_30.cpp  MapInfo_Defaults_Doom_Alpha_0_30.h  MapInfo_Defaults_Doom_Alpha_0_32.cpp  MapInfo_Defaults_Doom_Alpha_0_32.h  MapInfo_Defaults_FinalDoom.cpp  MapInfo_Defaults_FinalDoom_Alpha.cpp  MapInfo_Defaults_FinalDoom_Alpha.h  MapInfo_Defaults_GEC_ME_Beta3.cpp  MapInfo_Parse.h
game/PsyDoom/MapPatcher/: MapPatcher.cpp  MapPatches.h  MapPatches_Doom_Alpha_0_05.cpp  MapPatches_Doom_Alpha_0_30.cpp  MapPatches_Doom_Alpha_0_32.cpp  MapPatches_FinalDoom_Alpha.cpp
game/PsyDoom/Movie/: CDXAFileStreamer.h  MoviePlayer.cpp
game/PsyDoom/Vulkan/: IVRenderPath.h  VCrossfader.cpp  VDrawing.cpp  (+18 more)
game/PsyQ/: LIBGPU_Resources.cpp  LIBSPU.cpp
game/Wess/: psxcd.cpp  psxcd.h
simple_gpu/: CMakeLists.txt  Gpu.cpp
simple_spu/: CMakeLists.txt  Spu.cpp  Spu.h
third_party_libs/asio/: CMakeLists.txt
third_party_libs/fltk/: CMakeLists.txt  Version.txt
third_party_libs/libogg/: CMakeLists.txt  Version.txt
third_party_libs/libsdl/: CMakeLists.txt  Version.txt
third_party_libs/libvorbis/: CMakeLists.txt  Version.txt
third_party_libs/lua/: Version.txt
third_party_libs/rapidjson/: Version.txt
third_party_libs/sol2/: Version.txt
tools/other/alpha_0_05_wad_convert/: Alpha_0_05_Wad_Convert.cpp  CMakeLists.txt
vulkan_gl/: BaseTexture.cpp  BaseTexture.h  CMakeLists.txt  DescriptorSet.cpp  DescriptorSet.h  Framebuffer.cpp  Framebuffer.h  RenderPass.cpp  Texture.cpp  VulkanInstance.cpp
vulkan_shaders/: ShaderCommon_Frag.h  ShaderCommon_Vert.h  colored.vert  compile_all.py  crossfade_gamma.frag  gamma_adjust.frag  gamma_adjust_blit.frag  gamma_adjust_post_process.frag  msaa_resolve.frag  ui.vert  world.frag  world.vert
vulkan_shaders/compiled/: SPIRV_colored_frag.bin.h  SPIRV_colored_vert.bin.h  SPIRV_crossfade_frag.bin.h  SPIRV_crossfade_gamma_frag.bin.h  SPIRV_gamma_adjust_blit_frag.bin.h  SPIRV_gamma_adjust_frag.bin.h  SPIRV_gamma_adjust_post_process_frag.bin.h  SPIRV_msaa_resolve_frag.bin.h  SPIRV_ndc_position_only_vert.bin.h  SPIRV_ndc_textured_frag.bin.h  SPIRV_ndc_textured_vert.bin.h  SPIRV_sky_frag.bin.h  SPIRV_sky_vert.bin.h  SPIRV_ui_16bpp_frag.bin.h  SPIRV_ui_4bpp_frag.bin.h  SPIRV_ui_8bpp_frag.bin.h  SPIRV_ui_vert.bin.h  SPIRV_world_frag.bin.h  SPIRV_world_vert.bin.h
(+14 files in other folders)
